After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757286 - Fix crash when trying to release a reference we don't own
Fix crash when trying to release a reference we don't own
Status: RESOLVED FIXED
Product: librsvg
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: librsvg maintainers
librsvg maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-29 08:47 UTC by Florian Müllner
Modified: 2015-10-30 06:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix crash when trying to release a reference we don't own (1.75 KB, patch)
2015-10-29 08:47 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2015-10-29 08:47:04 UTC
Fix a crash when hitting the following assertion:

cairo_surface_destroy: Assertion `(_cairo_atomic_int_get (&(&surface->ref_count)->ref_count) > 0)' failed.
Comment 1 Florian Müllner 2015-10-29 08:47:07 UTC
Created attachment 314369 [details] [review]
Fix crash when trying to release a reference we don't own

Commit 9fc56102ca changed the condition for creating a new surface,
but did not update the condition for freeing it, resulting in a
crash when trying to release a reference we don't own.
Comment 2 Matthias Clasen 2015-10-30 01:01:00 UTC
Review of attachment 314369 [details] [review]:

Oops
Comment 3 Matthias Clasen 2015-10-30 01:01:00 UTC
Review of attachment 314369 [details] [review]:

Oops
Comment 4 Florian Müllner 2015-10-30 06:32:48 UTC
Attachment 314369 [details] pushed as 1d9e887 - Fix crash when trying to release a reference we don't own