Fix crash when trying to release a reference we don't own

Commit 9fc56102ca changed the condition for creating a new surface,
but did not update the condition for freeing it, resulting in a
crash when trying to release a reference we don't own.

https://bugzilla.gnome.org/show_bug.cgi?id=757286